--- a/reactjs/public/styles/favouriteBrand/brandProduct.css
+++ b/reactjs/public/styles/favouriteBrand/brandProduct.css
@@ -10,6 +10,7 @@
   padding: 10px;
   margin-right: 10px;
   height: 300px;
+  text-decoration: none;
   margin-top: 20px;
 }
 .body-container .wrapper .product-list-container .brand-container .brand-body .favourite-brand-card a .brand-product {
