--- a/reactjs/public/styles/favouriteBrand/brandProduct.scss
+++ b/reactjs/public/styles/favouriteBrand/brandProduct.scss
@@ -15,6 +15,7 @@
                         margin-right: 10px;
                         height: 300px;
                         // width: 100%;
+                        text-decoration: none;
                         margin-top: 20px;
                         a {
                             .brand-product {
