--- a/reactjs/public/styles/menubar/menubar.css
+++ b/reactjs/public/styles/menubar/menubar.css
@@ -13,6 +13,7 @@
     color: black;
     font-size: 20px;
     display: block;
+    text-decoration: none;
   }
   .menu-bar ul li:hover {
     background-color: #f0fbff;
