--- a/reactjs/src/pages/admin/components/rightBar/rightBar.scss
+++ b/reactjs/src/pages/admin/components/rightBar/rightBar.scss
@@ -1,3 +1,4 @@
+
 .right {
     margin-top: 1.4rem;
 
@@ -77,7 +78,7 @@
 
             h2 {
                 margin-bottom: .8rem;
-
+                font-size: 25px;
             }
 
             .updates {
@@ -124,7 +125,7 @@
 
             h2 {
                 margin-bottom: 0.8rem;
-
+                font-size: 25px;
             }
 
             .online .icon {
