--- a/reactjs/src/pages/admin/components/sideBar/sideBar.css
+++ b/reactjs/src/pages/admin/components/sideBar/sideBar.css
@@ -10,7 +10,8 @@ aside .sidebar-container .top {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-top: 1.4rem;
+  margin-top: 35px;
+  height: 60px;
 }
 aside .sidebar-container .top .logo {
   display: flex;
@@ -40,8 +41,9 @@ aside .sidebar-container .sidebar a {
   gap: 1rem;
   align-items: center;
   position: relative;
-  height: 3.7rem;
+  height: 55px;
   transition: all 300ms ease;
+  text-decoration: none;
 }
 aside .sidebar-container .sidebar a:hover {
   color: var(--color-primary);
@@ -54,6 +56,7 @@ aside .sidebar-container .sidebar a .material-symbols-sharp {
   transition: all 300ms ease;
 }
 aside .sidebar-container .sidebar a h3 {
+  font-size: 15px;
   font-weight: 500;
 }
 aside .sidebar-container .sidebar .footer-sidebar {
