--- a/reactjs/src/pages/admin/pages/product/adminProductList.css
+++ b/reactjs/src/pages/admin/pages/product/adminProductList.css
@@ -1,1 +1,3 @@
-.admin-home-container .admin-product-list-nav-table{margin-top:80px}
+.admin-home-container .admin-product-list-nav-table {
+  margin-top: 80px;
+}/*# sourceMappingURL=adminProductList.css.map */
