--- a/reactjs/src/pages/admin/pages/addProduct/addproduct.css
+++ b/reactjs/src/pages/admin/pages/addProduct/addproduct.css
@@ -8,79 +8,72 @@
   justify-content: space-between;
 }
 .admin-home-container .add-product-container .add-product-card-general {
-  border: 1px solid black;
+  border: 1px solid rgba(188, 188, 188, 0.299);
   width: 50%;
   background-color: white;
   height: 80vh;
+  padding-left: 20px;
 }
 .admin-home-container .add-product-container .add-product-card-general .add-product-card-general-heading {
   height: 50px;
-  background-color: aqua;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
-.admin-home-container .add-product-container .add-product-card-general .add-product-card-general-body {
-  padding: 20px;
+.admin-home-container .add-product-container .add-product-card-general .add-product-card-general-heading h2 {
+  font-size: 18px;
+  color: #495057;
 }
 .admin-home-container .add-product-container .add-product-card-general .add-product-card-general-body .add-product-card-general-body-form .card-general-group .card-general-row {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 50px;
+  flex-direction: column;
+  margin-bottom: 20px;
 }
 .admin-home-container .add-product-container .add-product-card-general .add-product-card-general-body .add-product-card-general-body-form .card-general-group .card-general-row .card-general-label {
-  font-size: 18px;
+  font-size: 15px;
 }
 .admin-home-container .add-product-container .add-product-card-general .add-product-card-general-body .add-product-card-general-body-form .card-general-group .card-general-row .card-general-input {
-  border: 1px solid black;
-  width: 200px;
-  padding: 10px;
-  border-radius: 15px;
-  font-size: 18px;
+  border: 1px solid gray;
+  width: 90%;
+  padding: 8px;
+  font-size: 15px;
 }
 .admin-home-container .add-product-container .add-product-card-general .add-product-card-general-body .add-product-card-general-body-form .card-general-group .card-general-row .card-general-select {
-  border: 1px solid black;
+  border: 1px solid gray;
   width: 200px;
   padding: 10px;
-  border-radius: 15px;
-  font-size: 18px;
+  font-size: 15px;
 }
 .admin-home-container .add-product-container .add-product-card-pricing {
-  border: 1px solid black;
+  border: 1px solid rgba(188, 188, 188, 0.299);
   width: 45%;
   background-color: white;
   height: 80vh;
+  padding-left: 20px;
 }
 .admin-home-container .add-product-container .add-product-card-pricing .add-product-card-pricing-heading {
   height: 50px;
-  background-color: aqua;
 }
-.admin-home-container .add-product-container .add-product-card-pricing .add-product-card-pricing-body {
-  padding: 20px;
+.admin-home-container .add-product-container .add-product-card-pricing .add-product-card-pricing-heading h2 {
+  font-size: 18px;
+  color: #495057;
 }
 .admin-home-container .add-product-container .add-product-card-pricing .add-product-card-pricing-body .add-product-card-pricing-body-form .card-pricing-group .card-pricing-row {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 50px;
+  flex-direction: column;
+  margin-bottom: 20px;
 }
 .admin-home-container .add-product-container .add-product-card-pricing .add-product-card-pricing-body .add-product-card-pricing-body-form .card-pricing-group .card-pricing-row .card-pricing-label {
-  font-size: 18px;
+  font-size: 15px;
 }
 .admin-home-container .add-product-container .add-product-card-pricing .add-product-card-pricing-body .add-product-card-pricing-body-form .card-pricing-group .card-pricing-row .card-pricing-input {
-  border: 1px solid black;
-  width: 200px;
-  padding: 10px;
-  border-radius: 15px;
-  font-size: 18px;
+  border: 1px solid gray;
+  width: 90%;
+  padding: 8px;
+  font-size: 15px;
 }
 .admin-home-container .add-btn {
-  background-color: aquamarine;
+  background-color: #3F80EA;
   padding: 10px 20px;
-  color: black;
+  color: white;
   font-weight: 600;
-  border-radius: 20px;
   margin-top: 20px;
   cursor: pointer;
   float: right;
