--- a/reactjs/src/pages/admin/pages/addProduct/addproduct.scss
+++ b/reactjs/src/pages/admin/pages/addProduct/addproduct.scss
@@ -1,51 +1,49 @@
 .admin-home-container {
     height: 100vh;
-
     .add-product-container {
         height: 80vh;
         margin-top: 80px;
         display: flex;
         justify-content: space-between;
         .add-product-card-general {
-            border: 1px solid black;
+            border: 1px solid rgba(188, 188, 188, 0.299);
             width: 50%;
             background-color: white;
             height: 80vh;
+            padding-left: 20px ;
             .add-product-card-general-heading {
                 height: 50px;
-                background-color: aqua;
-                display: flex;
-                justify-content: center;
-                align-items: center;
+                h2{
+                    font-size: 18px;
+                    color: #495057;
+                }
             }
 
             .add-product-card-general-body {
-                padding: 20px;
                 .add-product-card-general-body-form {
                     .card-general-group {
                         .card-general-row{
                             display: flex;
-                            justify-content: space-between;
-                            align-items: center;
-                            margin-bottom: 50px;
+                            flex-direction: column;
+                            margin-bottom: 20px;
                             .card-general-label {
-                                font-size: 18px;
+                                font-size: 15px;
                             }
     
                             .card-general-input {
-                                border: 1px solid black;
-                                width: 200px;
-                                padding: 10px;
-                                border-radius: 15px;
-                                font-size: 18px;
+                                border: 1px solid gray;
+                                width: 90%;
+                                padding: 8px;
+                                // border-radius: 15px;
+                                font-size: 15px;
 
                             }
                             .card-general-select{
-                                border: 1px solid black;
+                                border: 1px solid gray;
                                 width: 200px;
                                 padding: 10px;
-                                border-radius: 15px;
-                                font-size: 18px;
+                                // border-radius: 15px;
+                                font-size: 15px;
 
                             }
                         }
@@ -55,36 +53,36 @@
         }
 
         .add-product-card-pricing {
-            border: 1px solid black;
+            border: 1px solid rgba(188, 188, 188, 0.299);
             width: 45%;
             background-color: white;
             height: 80vh;
+            padding-left: 20px ;
 
             .add-product-card-pricing-heading {
                 height: 50px;
-                background-color: aqua;
+                h2{
+                    font-size: 18px;
+                    color: #495057;
+                }
             }
-
             .add-product-card-pricing-body {
-                padding: 20px;
-
                 .add-product-card-pricing-body-form {
                     .card-pricing-group {
                         .card-pricing-row{
                             display: flex;
-                            justify-content: space-between;
-                            align-items: center;
-                            margin-bottom: 50px;
+                            flex-direction: column;
+                            margin-bottom: 20px;
                             .card-pricing-label {
-                                font-size: 18px;
+                                font-size: 15px;
                             }
     
                             .card-pricing-input {
-                                border: 1px solid black;
-                                width: 200px;
-                                padding: 10px;
-                                border-radius: 15px;
-                                font-size: 18px;
+                                border: 1px solid gray;
+                                width: 90%;
+                                padding: 8px;
+                                // border-radius: 15px;
+                                font-size: 15px;
                             }
                         }
                     }
@@ -93,11 +91,10 @@
         }
     }
     .add-btn{
-        background-color: aquamarine;
+        background-color: #3F80EA;
         padding: 10px 20px;
-        color: black;
+        color: white;
         font-weight: 600;
-        border-radius: 20px;
         margin-top: 20px;
         cursor: pointer;
         float: right;
